# svx

./: CHANGELOG.md  Cargo.toml  LICENSE-THIRDPARTY.json  README.md
config/: merge.balance.toml  merge.defaults.toml
crates/hts-spill-sort/: Cargo.toml  README.md
crates/hts-spill-sort/src/: error.rs  lib.rs
crates/hts-spill-sort/src/output_sort/: config.rs  keys.rs  mod.rs  pending.rs  sorter.rs  spill.rs  spill_format.rs  spill_payload.rs  spill_reader.rs  spill_writer.rs  tests.rs
docs/: cli.md  guide.md  index.md  merge_constraints.md  output.md  tr_containment.md  tuning.md
src/: cli.rs  commands.rs  constants.rs  error.rs  lib.rs  main.rs
src/commands/: merge.rs
src/commands/merge/: bnd.rs  dump.rs  mod.rs  progress.rs  shutdown.rs  tests.rs  types.rs  worker.rs
src/core/: aligner.rs  svtype.rs  variant_block.rs  variant_internal.rs
src/core/containers/: forest.rs  interval_tree.rs  kd_tree.rs
src/core/variant/: bnd.rs  mod.rs  similarity.rs  test_utils.rs  tr.rs  vcf.rs
src/core/variant_block/: edge.rs  label.rs  sharding.rs  tests.rs
src/core/variant_block/merger/: constraints.rs  mod.rs  neighbor_search.rs
src/io/: bed_reader.rs  merge_reader.rs  merge_writer.rs  output_sort.rs  positions_reader.rs  readers.rs  tpool.rs  vcf_reader.rs  vcf_writer.rs
src/utils/: util.rs  util_intern.rs
