[package]
name = "svx"
version = "0.1.0"
build = "build.rs"
authors = ["Tom Mokveld <tmokveld@pacificbioscience.com"]
description = """
svx is a tool for structural variant merging.
"""
license-file = "LICENSE.md"
edition = "2021"

# TODO: migrate to vergen 9
[build-dependencies]
vergen = { version = "8.0.0", features = ["git", "gitcl"] }

[features]
default = ["use_mutable_kdtree"]
use_mutable_kdtree = []
use_immutable_kdtree = []

[[bin]]
bench = false
path = "src/main.rs"
name = "svx"

[dependencies]
kiddo = "5.0"
clap = { version = "4.5", features = ["suggestions", "derive"] }
wfa2-sys = { version = "0.1.0", git = "https://github.com/ctsa/rust-wfa2.git", rev = "4342b3b06278656fa51c0a33b4eb0b67d53bfa8c" }
rust-htslib = { version = "0.49", default-features = false }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
once_cell = "1.21"
anyhow = "1.0"
tempfile = "3"
flate2 = "1.1"
num-traits = "0.2"
rand = "0.9"
approx = "0.5"
tempdir = "0.3"
crossbeam-channel = "0.5"
rayon = "1.10"

[target.'cfg(target_os = "macos")'.dependencies]
libc = { version = "0.2" }
