[package]
name = "svx"
version = "0.5.0"
build = "build.rs"
authors = ["Tom Mokveld <tmokveld@pacificbioscience.com"]
description = """
svx is a tool for structural variant merging.
"""
license-file = "LICENSE.md"
edition = "2024"


[build-dependencies]
vergen-gitcl = { version = "1", features = ["build"] }

[dev-dependencies]
kiddo = "5.2"
proptest = "1"
rand = "0.9"
tempdir = "0.3"
tempfile = "3"

[[bin]]
path = "src/main.rs"
name = "svx"

[dependencies]
clap = { version = "4.5", features = ["suggestions", "derive"] }
wfa2-sys = { version = "0.1.0", git = "https://github.com/ctsa/rust-wfa2.git", rev = "4342b3b06278656fa51c0a33b4eb0b67d53bfa8c" }
rust-htslib = { version = "0.49", default-features = false }
bio = { version = "3", optional = true }
log = "0.4"
env_logger = "0.11"
owo-colors = { version = "4.2", features = ["supports-colors"] }
chrono = "0.4"
anyhow = "1.0"
thiserror = "2.0"
flate2 = "1.1"
num-traits = "0.2"
crossbeam-channel = "0.5"
rayon = "1.10"
indicatif = "0.18"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
libc = { version = "0.2" }
