[package]
name = "hts-spill-sort"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE.md"
description = "Deterministic external spill sorter for BCF/VCF records"

[features]
default = ["logging"]
logging = ["dep:log"]

[dependencies]
rust-htslib = { version = "0.49", default-features = false }
tempfile = "3"
thiserror = "2.0"
log = { version = "0.4", optional = true }
